--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,25 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.3.4'
+    }
+}
+
+publish {
+    userOrg = 'ryan0822'
+    groupId = 'com.github.ryan0822.webview-helper'
+    artifactId = 'webview-helper'
+    publishVersion = '0.0.5'
+    desc = ''
+    website = 'https://github.com/ryan0822/webview-helper'
+    issueTracker = "${website}/issues"
+    repository = "${website}.git"
+}
 
 android {
     compileSdkVersion 19
